# UserBench

./: .gitignore  CONTRIBUTING.md  README.md  eval.py  eval.sh  host.sh  pyproject.toml  requirements.txt  setup.py
data/travel2222_multiturn/: test.parquet  train.parquet
data/travel2222_multiturn_onechoice/: test.parquet  train.parquet
data/travel22_multiturn/: test.parquet  train.parquet
data/travel22_multiturn_onechoice/: test.parquet  train.parquet
data/travel233_multiturn/: test.parquet  train.parquet
data/travel233_multiturn_onechoice/: test.parquet  train.parquet
data/travel333_multiturn/: test.parquet  train.parquet
data/travel333_multiturn_onechoice/: test.parquet  train.parquet
data/travel334_multiturn/: test.parquet  train.parquet
data/travel334_multiturn_onechoice/: test.parquet  train.parquet
data/travel33_multiturn/: test.parquet  train.parquet
data/travel33_multiturn_onechoice/: test.parquet  train.parquet
data/travel444_multiturn/: test.parquet  train.parquet
data/travel444_multiturn_onechoice/: test.parquet  train.parquet
data/travel44_multiturn/: test.parquet  train.parquet
data/travel44_multiturn_onechoice/: test.parquet  train.parquet
schema/: interact_tool.yaml
travelgym/: __init__.py  config.py
travelgym/env/: prompt_async.py  prompts.py  travel_env.py
