[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travelgym"
version = "1.0.0"
description = "A Gymnasium environment for travel planning preference elicitation simulation using LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TravelGym Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.26.0",
    "numpy>=1.21.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/your-username/travelgym"
Repository = "https://github.com/your-username/travelgym"
Documentation = "https://github.com/your-username/travelgym"

[tool.setuptools.packages.find]
where = ["."]
include = ["travelgym*"]

[tool.setuptools.package-data]
travelgym = ["data/*.json"] 